@@ -1,0 +1,54 @@
+.. ==================================================
+.. FOR YOUR INFORMATION
+.. --------------------------------------------------
+.. -*- coding: utf-8 -*- with BOM.
+
+.. include:: Includes.txt
+
+
+=====================================
+Sphinx Python Documentation Generator
+=====================================
+
+:Classification:
+	sphinx
+
+:Version:
+	|release|
+
+:Language:
+	en
+
+:Description:
+	One-click install Sphinx generator for your TYPO3 website. This extension builds ReStructuredText
+	documentation (format of official TYPO3 manuals).
+
+:Keywords:
+	reStructured Text, sphinx, documentation
+
+:Copyright:
+	2013
+
+:Author:
+	Xavier Perseguers
+
+:Email:
+	xavier@causal.ch
+
+:License:
+	This document is published under the Open Content License
+	available from http://www.opencontent.org/opl.shtml
+
+:Rendered:
+	|today|
+
+The content of this document is related to TYPO3
+
+\- a GNU/GPL CMS/Framework available from www.typo3.org
+
+.. toctree::
+	:maxdepth: 5
+	:titlesonly:
+	:glob:
+
+	Introduction/Index
