@@ -1,0 +1,22 @@
+.. ==================================================
+.. FOR YOUR INFORMATION
+.. --------------------------------------------------
+.. -*- coding: utf-8 -*- with BOM.
+
+.. include:: ../Includes.txt
+
+
+Introduction
+------------
+
+.. toctree::
+   :maxdepth: 5
+   :titlesonly:
+   :glob:
+
+   WhatDoesItDo/Index
+   Screenshots/Index
+   SponsoringBugfixing/Index
+   SayThanks/Index
+   NeedHelp/Index
+
